--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Childcare</title>
+    <title>Coop Care</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
