adds functionality for commitments and myrequests routes

--- a/server/public/views/commitments.html
+++ b/server/public/views/commitments.html
@@ -18,7 +18,7 @@
         <td>{{item.comments}}</td>
         <td>
           <!-- <button class="btn btn-sm btn-primary" ng-click="commitments.uncommit(item.id)">Withdraw Offer</button> -->
-          <button class="btn btn-sm btn-primary" ng-click="commitments.setCompleted(item.id)">Completed</button>
+          <button class="btn btn-sm btn-primary" ng-click="commitments.markComplete(item.id)">Completed</button>
         </td>
       </tr>
     </tbody>
