--- a/server/public/views/myrequests.html
+++ b/server/public/views/myrequests.html
@@ -5,7 +5,7 @@
       <tr>
         <th>Start</th>
         <th>End</th>
-        <th>Requestor</th>
+        <th>Caregiver</th>
         <th>Comments</th>
         <th>Actions</th>
       </tr>
