--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -47,9 +47,13 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="open">Open Requests</a></li>
+            <li><a href="open">Open Requests</a></li>
             <li><a href="commitments">My Commitments</a></li>
             <li><a href="requests">My Requests</a></li>
+          </ul>
+          <ul class="nav nav-sidebar">
+            <li><a href="coop">My Coop</a></li>
+            <li><a href="profile">My Profile</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
