--- a/server/public/views/coop.html
+++ b/server/public/views/coop.html
@@ -1,4 +1,4 @@
-<h2 class="sub-header">My Commitments</h2>
+<h2 class="sub-header">Members</h2>
 <div class="table-responsive">
   <table class="table table-striped">
     <thead>
