--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -57,7 +57,7 @@
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">{{main.coop.name}}</h1>
+          <h1 class="page-header">{{main.loggedInUser.coopName}}</h1>
 
           <div class="row">
             <div class="col-xs-6 col-sm-3">
