merges more stashed changes

--- a/server/public/stylesheets/signin.css
+++ b/server/public/stylesheets/signin.css
@@ -2,7 +2,7 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
   padding-right: 80px;
-  background-image: url("../assets/splash2.jpeg");
+  background-image: url("../assets/splash.jpeg");
   background-size: cover;
   background-color: #eee;
 }
