--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -47,23 +47,21 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
+            <li><a href="req-form">New Request</a></li>
+            <li class="disabled"><a href="offer-form">New Offer</a></li>
+          </ul>
+          <ul class="nav nav-sidebar">
             <li><a href="open">Open Requests</a></li>
             <li><a href="commitments">My Commitments</a></li>
             <li><a href="requests">My Requests</a></li>
           </ul>
           <ul class="nav nav-sidebar">
             <li><a href="coop">My Coop</a></li>
-            <!-- <li><a href="profile">My Profile</a></li> -->
+            <li class="disabled"><a href="profile">My Profile</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header">{{main.loggedInUser.coopName}}</h1>
-
-          <div class="row">
-            <div class="col-xs-6 col-sm-3">
-              <button class="btn btn-lg btn-warning" alt="I Need Help">I Need Help</button>
-            </div>
-          </div>
 
           <div id="main">
             <ng-view></ng-view>
