--- a/server/public/views/signin.html
+++ b/server/public/views/signin.html
@@ -37,15 +37,15 @@
 
         <form class="form-register" action="/users" method="post">
           <h2 class="form-register-heading">Create a new account</h2>
-          <label for="inputFirstname" class="sr-only">First name</label>
-          <input type="text" id="firstname_field" name="first_name" class="form-control" placeholder="First name" required autofocus>
-          <label for="inputLastname" class="sr-only">Last name</label>
-          <input type="text" name="last_name" class="form-control" placeholder="Last name" required autofocus>
-          <label for="inputEmail" class="sr-only">Email address</label>
-          <input type="email" name="email" class="form-control" placeholder="Email address" required autofocus>
-          <label for="inputPhone" class="sr-only">Phone number</label>
-          <input type="phone" name="phone" class="form-control" placeholder="Phone number" autofocus>
-          <label for="inputPassword" class="sr-only">Password</label>
+          <label for="first_name" class="sr-only">First name</label>
+          <input type="text" id="first_name" name="first_name" class="form-control" placeholder="First name" required autofocus>
+          <label for="last_name" class="sr-only">Last name</label>
+          <input type="text" id="last_name" name="last_name" class="form-control" placeholder="Last name" required autofocus>
+          <label for="email" class="sr-only">Email address</label>
+          <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required autofocus>
+          <label for="phone" class="sr-only">Phone number</label>
+          <input type="phone" id="phone" name="phone" class="form-control" placeholder="Phone number" autofocus>
+          <label for="password-field" class="sr-only">Password</label>
           <input type="password" id="password_field" name="password" class="form-control" placeholder="Password" required>
           <input class="btn btn-lg btn-primary btn-block" type="submit" id="register_button" value="Register"/>
         </form>
