--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -47,8 +47,7 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li><a href="req-form">New Request</a></li>
-            <li class="disabled"><a href="offer-form">New Offer</a></li>
+            <li><a href="newReq">New Request</a></li>
           </ul>
           <ul class="nav nav-sidebar">
             <li><a href="open">Open Requests</a></li>
@@ -57,7 +56,6 @@
           </ul>
           <ul class="nav nav-sidebar">
             <li><a href="coop">My Coop</a></li>
-            <li class="disabled"><a href="profile">My Profile</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
