--- a/server/public/views/signin.html
+++ b/server/public/views/signin.html
@@ -44,7 +44,7 @@
           <label for="email" class="sr-only">Email address</label>
           <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required autofocus>
           <label for="phone" class="sr-only">Phone number</label>
-          <input type="phone" id="phone" name="phone" class="form-control" placeholder="Phone number" autofocus>
+          <input type="tel" id="phone" name="phone" class="form-control" placeholder="Phone number" autofocus>
           <label for="password-field" class="sr-only">Password</label>
           <input type="password" id="password_field" name="password" class="form-control" placeholder="Password" required>
           <input class="btn btn-lg btn-primary btn-block" type="submit" id="register_button" value="Register"/>
