adds commit, cancel, and complete functionality for requests

--- a/server/public/views/commitments.html
+++ b/server/public/views/commitments.html
@@ -11,14 +11,14 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="item in commitments.requestList">
+      <tr ng-repeat="item in commitments.requestList track by $index">
         <td>{{item.startDisplay}}</td>
         <td>{{item.endDisplay}}</td>
         <td>{{item.first_name}} {{item.last_name}}</td>
         <td>{{item.comments}}</td>
         <td>
           <!-- <button class="btn btn-sm btn-primary" ng-click="commitments.uncommit(item.id)">Withdraw Offer</button> -->
-          <button class="btn btn-sm btn-primary" ng-click="commitments.markComplete(item.id)">Completed</button>
+          <button class="btn btn-sm btn-primary" ng-click="commitments.markComplete(item)">Completed</button>
         </td>
       </tr>
     </tbody>
