--- a/server/public/stylesheets/signin.css
+++ b/server/public/stylesheets/signin.css
@@ -44,7 +44,7 @@ body {
   border-bottom-left-radius: 0;
 }
 
-.form-register input[type="name"], #first_name {
+ #first_name {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
@@ -56,7 +56,7 @@ body {
   border-top-right-radius: 0;
 }
 
-.form-register input {
+.form-register .square  {
   margin-bottom: -1px;
   border-radius: 0;
 }
