--- a/server/public/views/signin.html
+++ b/server/public/views/signin.html
@@ -40,11 +40,11 @@
           <label for="first_name" class="sr-only">First name</label>
           <input type="text" id="first_name" name="first_name" class="form-control" placeholder="First name" required autofocus>
           <label for="last_name" class="sr-only">Last name</label>
-          <input type="text" id="last_name" name="last_name" class="form-control" placeholder="Last name" required autofocus>
+          <input type="text" id="last_name" name="last_name" class="form-control square" placeholder="Last name" required autofocus>
           <label for="email" class="sr-only">Email address</label>
-          <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required autofocus>
+          <input type="email" id="email" name="email" class="form-control square" placeholder="Email address" required autofocus>
           <label for="phone" class="sr-only">Phone number</label>
-          <input type="tel" id="phone" name="phone" class="form-control" placeholder="Phone number" autofocus>
+          <input type="tel" id="phone" name="phone" class="form-control square" placeholder="Phone number" autofocus>
           <label for="password-field" class="sr-only">Password</label>
           <input type="password" id="password_field" name="password" class="form-control" placeholder="Password" required>
           <input class="btn btn-lg btn-primary btn-block" type="submit" id="register_button" value="Register"/>
