adds new request form styling

--- a/server/public/views/requestform.html
+++ b/server/public/views/requestform.html
@@ -4,5 +4,5 @@
   <input ng-model="end_time" name="end_time" type="datetime-local" />
   <label for="comments" class="sr-only">Comments</label>
   <textarea name="comments" class="form-control" placeholder="Comments"></textarea>
-  <input class="btn btn-lg btn-primary btn-block" type="submit" />
+  <input class="btn btn-md btn-primary" type="submit" id="new_request_btn"/>
 </form>
