--- a/server/public/stylesheets/styles.css
+++ b/server/public/stylesheets/styles.css
@@ -84,22 +84,13 @@ body {
   margin-top: 0;
 }
 
-
 /*
- * Placeholder dashboard ideas
- */
+New request form
+*/
+.reqForm input, .reqForm textarea {
+  margin: 8px 0;
+}
 
-.placeholders {
-  margin-bottom: 30px;
-  text-align: center;
-}
-.placeholders h4 {
-  margin-bottom: 0;
-}
-.placeholder {
-  margin-bottom: 20px;
-}
-.placeholder img {
-  display: inline-block;
-  border-radius: 50%;
+.reqForm input[type="datetime-local"] {
+  margin-right: 8px;
 }
