--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -56,6 +56,7 @@
           </ul>
           <ul class="nav nav-sidebar">
             <li><a href="coop">My Coop</a></li>
+            <li><a href="invite">Invite</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
