adds display date to invitations page, corrects new user login bug

--- a/server/public/stylesheets/styles.css
+++ b/server/public/stylesheets/styles.css
@@ -87,7 +87,7 @@ body {
 /*
 New request form
 */
-.reqForm input, .reqForm textarea {
+.reqForm input, .reqForm textarea, .inviteForm input, .inviteForm textarea {
   margin: 8px 0;
 }
 
