--- a/server/public/views/commitments.html
+++ b/server/public/views/commitments.html
@@ -12,8 +12,8 @@
     </thead>
     <tbody>
       <tr ng-repeat="item in commitments.requestList track by $index">
-        <td>{{item.startDisplay}}</td>
-        <td>{{item.endDisplay}}</td>
+        <td>{{item.display_start_time}}</td>
+        <td>{{item.display_end_time}}</td>
         <td>{{item.first_name}} {{item.last_name}}</td>
         <td>{{item.comments}}</td>
         <td>
