--- a/server/public/views/open.html
+++ b/server/public/views/open.html
@@ -12,8 +12,8 @@
     </thead>
     <tbody>
       <tr ng-repeat="item in open.requestList track by $index">
-        <td>{{item.startDisplay}}</td>
-        <td>{{item.endDisplay}}</td>
+        <td>{{item.display_start_time}}</td>
+        <td>{{item.display_end_time}}</td>
         <td>{{item.first_name}} {{item.last_name}}</td>
         <td>{{item.comments}}</td>
         <td><button class="btn btn-sm btn-primary" ng-click="open.assignRequest(item)">I Can Help</button></td>
