adds sample coop data function so app will work on heroku

--- a/server/public/views/signin.html
+++ b/server/public/views/signin.html
@@ -22,7 +22,7 @@
   <body>
 
     <div class="container">
-      <div class="well">
+      <div class="well" ng-controller="LoginController">
 
         <form class="form-signin" action="/" method="post">
           <h2 class="form-signin-heading">Please sign in</h2>
