adds header image to inner pages

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -59,7 +59,7 @@
             <li><a href="invite">Invite</a></li>
           </ul>
         </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div id="content-window" class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header">{{main.loggedInUser.coopName}}</h1>
 
           <div id="main">
@@ -67,11 +67,6 @@
           </div>
 
         </div>
-        <!-- <footer>
-          <div class="container">
-            <p>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
-          </div>
-        </footer> -->
       </div>
     </div>
 
