--- a/server/public/stylesheets/styles.css
+++ b/server/public/stylesheets/styles.css
@@ -84,6 +84,14 @@ body {
   margin-top: 0;
 }
 
+#content-window {
+  background-image: url("../assets/splash22.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: top;
+  padding-top: 240px;
+}
+
 /*
 New request form
 */
